# charybdis

./: README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt
charybdis/: __init__.py  charybdis.py
