[project]
name = "charybdis"
description = "Tiny Hi-Rez API wrapper"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = ["httpx"]
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Source Code" = "https://github.com/NAZADOTH/charybdis"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
