[project]
name = "charybdis"
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = ["httpx"]
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Source Code" = "https://github.com/NAZADOTH/charybdis"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true

[tool.taskipy.tasks]
lint = "black charybdis && isort charybdis && flake8 charybdis && mypy charybdis"
